[tool.poetry]
name = "gym-lib"
version = "0.1.0"
description = ""
authors = ["Cameron <cameronwood858@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.0"
pandas = "^2.2.3"
pre-commit = "^4.0.1"
pyprojroot = "^0.3.0"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
