[tool.poetry]
name = "gym-lib"
version = "0.1.0"
description = ""
authors = ["Cameron <cameronwood858@googlemail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.0"
pandas = "^2.2.3"
pyprojroot = "^0.3.0"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
